--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,23 +2,38 @@
 # https://symfony.com/doc/current/security.html
 security:
 
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
-    providers:
-        in_memory:
-            memory: ~
+  # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+  providers:
+    our_db_provider:
+      entity:
+        class: AppBundle:User
+    in_memory:
+      memory:
+  encoders:
+    AppBundle\Entity\User:
+      algorithm: bcrypt
+      cost: 12
+  firewalls:
+    # disables authentication for assets and the profiler, adapt it according to your needs
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
 
-    firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        main:
-            anonymous: ~
-            # activate different ways to authenticate
-
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+    main:
+      pattern: ^/
+      provider: our_db_provider
+      anonymous: ~
+      # activate different ways to authenticate
+      form_login:
+        login_path: login
+        check_path: login
+        success_handler: app.login_handler
+      # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
+      # http_basic: ~
+      logout:
+        path: /logout
+      # https://symfony.com/doc/current/security/form_login_setup.html
+  access_control:
+  # require ROLE_ADMIN for /admin*
+  - { path: ^/admin, roles: ROLE_ADMIN }
+  - { path: ^/user, roles: ROLE_USER }
