--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,4 +36,4 @@ security:
   access_control:
   # require ROLE_ADMIN for /admin*
   - { path: ^/admin, roles: ROLE_ADMIN }
-  - { path: ^/user, roles: ROLE_USER }
+  - { path: ^/gebruiker, roles: ROLE_USER }
